# AdvancedVertexSkinning

./: .clang-format  .gitignore  CMakeLists.txt  OpenGL.sln  README.md
Dependencies/ASSIMP/include/assimp/: assimp_extras.h
OpenGL/: OpenGL.vcxproj  OpenGL.vcxproj.filters  imgui.ini
OpenGL/Release/OpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL.lastbuildstate
OpenGL/res/object/body/: Pointing.fbx  PullPlant.fbx  PutBackShoulder.fbx  SambaDancing.fbx  VictoryMonster.fbx  balei.fbx  dance.fbx  dinasour.fbx  get_up.fbx  groo.fbx  paobu.fbx  pedobear_animated.fbx  pray.fbx  silly_dance.fbx  sk2_leafbone.fbx  skinning_test.fbx  turtle.fbx  turtle_texture.fbx
OpenGL/res/object/cylinder/: anim_cylinder.fbx  anim_cylinder2.fbx  leafbone.fbx
OpenGL/res/shaders/: fragment.shader  lamp.fs  lamp.vs  skeleton.fs  skeleton.vs  vertex.shader
OpenGL/src/: Application.cpp  Camera.h  Lamp.cpp  Lamp.h  Log.h  Mesh.cpp  Mesh.h  MeshData.inl  Model.cpp  Model.h  Shader.h  Skeleton.cpp  Skeleton.h  debug.h
res/shaders/: skeleton.fs
src/: Application.cpp  Lamp.cpp  Lamp.h  Log.h  Mesh.cpp  MeshData.inl  Model.h  stb_image.h
